Unsubscribing requires selecting the folder first
abbreviations and my environment:
Outlook = Microsoft Outlook 2010 64-Bit on Windows 7 Enterprise 64-Bit
Evolution = Fedora 28 x86_64 with packages:
$ rpm -qa "evolution*"
evolution-help-3.28.5-1.fc28.noarch
evolution-langpacks-3.28.5-1.fc28.noarch
evolution-ews-3.28.5-1.fc28.x86_64
evolution-data-server-langpacks-3.28.5-1.fc28.noarch
evolution-3.28.5-1.fc28.x86_64
evolution-data-server-3.28.5-1.fc28.x86_64
evolution-ews-langpacks-3.28.5-1.fc28.noarch
evolution-data-server-devel-3.28.5-1.fc28.x86_64
The email account used in Outlook, OWA, and Evolution is hosted on a Microsoft Exchange server 2010. Evolution's EWS interface is used.
the problem:
If a non-subscribed folder, f.i. inbox, is selected, right mouse button click on a subscribed folder and opting to unsubscribe it has no effect.
After clicking unsubscribe from the context menu something should happen. Behaviour with below mentioned workaround is OK. Maybe there is good reason to require left clicking subscribed folder first before you can unsubcribe?
steps to reproduce the problem:
How to create a shared folder is explained in evolution-ews#14 (closed) at "steps to reproduce the problem". I hope it is OK to link to it.
- subscribe to shared folder:
- switch to Evolution's "Mail" mode
- right mouse button click on main email folder -- Subscribe to folder of other user...
- select "User:" with [Choose...]
- select "Folder name:", usually "Inbox"
- if you want to access a subfolder: [x] Include subfolders
- unsubscribe from the shared folder:
- left mouse button click on a non-subscribed folder
- right mouse button click the subscribed folder (Foreign Folders -- Mailbox - NAME -- FOLDER) -- Unsubscribe
- nothing happens
workaround:
- left mouse button click on FOLDER at: Foreign Folders -- Mailbox - NAME -- FOLDER
- right mouse button click the same folder -- Unsubscribe -- [Unsubscribe]
On a related note:
The text at the unsubscribe pop up window reads:
Really unsubscribe folder "DELEGATE-EMAIL-ADDRESS : Foreign Folders/Mailbox - SHARER-EMAIL-ADDRESS"?
If you unsubscribe the folder, it might not be visible in the Evolution, while still being available on the server. You can re-subscribe in Folder->Subscriptions... menu.
[Do Not Unsubscribe] [Unsubscribe]
From my point of view, the text "You can re-subscribe in Folder->Subscriptions... menu." is wrong. The menu is available, but I cannot subscribe to the shared folder there. I am not sure if this has been fixed by evolution-ews@f26fb7da (result of flatpak compilation of evolution-master.json fails to start for me) or if I should create a new bug report.