I#118 - Unsubscribing requires selecting the folder first

Closes https://gitlab.gnome.org/GNOME/evolution/issues/118